// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-on-mobile"
    >
      Expenses
    </div>
    <div
      className="show-on-desktop"
    >
      Expense
    </div>
    <div
      className="show-on-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <span
      className="list-item list-item__message"
    >
      You have no expenses.
    </span>
  </div>
</div>
`;

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-on-mobile"
    >
      Expenses
    </div>
    <div
      className="show-on-desktop"
    >
      Expense
    </div>
    <div
      className="show-on-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={5000}
      createdAt={0}
      description="groceries"
      id="1"
      key="1"
      note="from Jack's"
    />
    <ExpenseListItem
      amount={200}
      createdAt={432000000}
      description="medium coffee"
      id="2"
      key="2"
      note="food truck around the block from work"
    />
    <ExpenseListItem
      amount={70000}
      createdAt={-432000000}
      description="gas bill"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
